--- a/src/app/shared-module/sidebar/sidebar.component.html
+++ b/src/app/shared-module/sidebar/sidebar.component.html
@@ -25,6 +25,7 @@
     <div class="bg-white py-2 collapse-inner rounded">
       <a class="collapse-item" routerLink="/localisation">Pays</a>
       <a class="collapse-item" routerLink="/localisation/ville">Localité</a>
+      <a class="collapse-item" routerLink="/localisation/emplacement">Emplacement</a>
     </div>
   </div>
 </li>
